syntax = "proto3";

import "google/protobuf/empty.proto";

package fr.unice.polytech.soa.team.j.bluegalacticx.booster;

option java_multiple_files = true;
option java_package = "fr.unice.polytech.soa.team.j.bluegalacticx.booster.proto";

service Booster {
  rpc initiateLandingSequence(LandingRequest) returns (google.protobuf.Empty) {}
}

message LandingRequest {
  string boosterId = 1;
  double distanceFromEarth = 2;
  double speed = 3;
}
